--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,8 @@
         },
         "classmap": [
             "database/seeds",
-            "database/factories"
+            "database/factories",
+            "app/Models"
         ]
     },
     "autoload-dev": {
